--- a/Hospitalvisittime/app/src/main/res/layout/list_group.xml
+++ b/Hospitalvisittime/app/src/main/res/layout/list_group.xml
@@ -5,13 +5,16 @@
     android:orientation="horizontal">
 
     <TextView
+        android:gravity=""
+        android:text="1111"
+        android:textSize="24dp"
         android:id="@+id/listTitle"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
+        android:paddingBottom="20dp"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:paddingTop="10dp"
+        android:paddingTop="20dp"
         android:textColor="@color/list_group_title"/>
 
 </LinearLayout>
