--- a/Hospitalvisittime/app/src/main/res/layout/list_item.xml
+++ b/Hospitalvisittime/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical">
 
     <TextView
+
+        android:textSize="14dp"
         android:id="@+id/expandedListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
