--- a/Hospitalvisittime/app/src/main/res/values/dimens.xml
+++ b/Hospitalvisittime/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
 
     <dimen name="header_font_size">14sp</dimen>
     <dimen name="movie_icon_container_height">300dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
