--- a/Hospitalvisittime/app/src/main/res/layout/mylayout.xml
+++ b/Hospitalvisittime/app/src/main/res/layout/mylayout.xml
@@ -3,121 +3,123 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
-<LinearLayout 
-    android:layout_height="match_parent"
-	android:layout_width="match_parent" 
-	android:layout_weight="7"  
-	   android:orientation="horizontal"  
-    >
-
-    <ImageView
-        android:id="@+id/photoimg"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_gravity="center_vertical"/>
-
-</LinearLayout>
-
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:orientation="horizontal" >
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
         <LinearLayout
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="8"
-            android:visibility="visible">
-
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/bigtext"
+                android:id="@+id/text1"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center"
-                android:layout_marginLeft="8dp"
-                android:text="狗"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#8B4513" />
-
+                android:text="看診狀態"
+                android:textSize="12dp"
+                ></TextView>
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:layout_marginLeft="4dp">
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/text2"
 
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="看診科別"
+                android:textSize="12dp"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/name"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="第一行文字"
-                android:textColor="#0000CC"
-                android:textSize="20dp" />
+                android:id="@+id/text3"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="看診號碼"
+                android:textSize="12dp"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/text4"
 
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="最後掛號號碼"
+                android:textSize="12dp"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/txtengname"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="第二行文字"
-                android:textColor="#FF0000"
-                android:textSize="16dp" />
+                android:id="@+id/text5"
+
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="現場待診人數"
+                android:textSize="12dp"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/palace"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="第三行文字"
-                android:textColor="#880000"
-                android:textSize="16dp" />
+                android:id="@+id/text6"
+
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="報到狀態"
+                android:textSize="12dp"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/time"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="第四行文字"
-                android:textColor="#4B0082"
-                android:textSize="16dp" />
-            <TextView
-                android:id="@+id/view"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="觀看人數"
-                android:textColor="#4B0082"
-                android:textSize="16dp" />
-            <TextView
-                android:id="@+id/like"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="喜歡人數"
-                android:textColor="#4B0082"
-                android:textSize="16dp" />
+                android:id="@+id/text7"
+
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="醫師姓名"
+                android:textSize="12dp"
+                ></TextView>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/text8"
+
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="看診位置"
+                android:textSize="12dp"
+                ></TextView>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
